--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -9,23 +9,22 @@
   </div>
 </div>
 <%-# radi lokalno -%>
-<% if false %>
 <h3>Top tracks</h3>
-   <table class="table table-hover">
-      <thead>
-        <tr>
-          <th>Name</th>
-          <th>Duration</th>
-          <th>Genre</th>
-          <th>Artist</th>
-          <th>Album</th>
-          <th>Year</th>
-          <th>Actions</th>
-        </tr>
-      </thead>
-      <tbody>
-        <%= render @top_tracks %>
-      </tbody>
-    </table>
-<% end %>
+  <table class="table table-hover">
+    <thead>
+      <tr>
+        <th>Name</th>
+        <th>Duration</th>
+        <th>Genre</th>
+        <th>Artist</th>
+        <th>Album</th>
+        <th>Year</th>
+        <th>Actions</th>
+       </tr>
+    </thead>
+    <tbody>
+      <%= render @top_tracks %>
+    </tbody>
+  </table>
+</div>
 
